--- a/.github/workflows/flask-build.yaml
+++ b/.github/workflows/flask-build.yaml
@@ -46,3 +46,17 @@ jobs:
     - name: Kill Flask app
       run: |
         pkill -f application.py
+
+    - name: Generate deployment package
+      run: zip -r deploy.zip . -x '*.git*'
+
+    - name: Deploy to EB
+      uses: einaregilsson/beanstalk-deploy@v22
+      with:
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        application_name: application
+        environment_name: Flask-test-env
+        version_label: 12345
+        region: us-east-1
+        deployment_package: deploy.zip
