--- a/.github/workflows/flask-build.yaml
+++ b/.github/workflows/flask-build.yaml
@@ -50,7 +50,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git add version.txt
           git commit -m "Increment version to ${{ env.new_version }}"
-          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
+          git push https://${GH_PAT}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
 
   build-and-test:
     runs-on: ubuntu-latest
