Add job permissions

--- a/.github/workflows/flask-build.yaml
+++ b/.github/workflows/flask-build.yaml
@@ -12,6 +12,8 @@ on:
 jobs:
   increment-version:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       version: ${{ steps.bump_version.outputs.version}}
     steps:
