--- a/.github/workflows/flask-build.yaml
+++ b/.github/workflows/flask-build.yaml
@@ -95,6 +95,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+      
     - name: Generate deployment package
       run: zip -r deploy.zip . -x '*.git*'
 
