--- a/.github/workflows/flask-build.yaml
+++ b/.github/workflows/flask-build.yaml
@@ -99,7 +99,8 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Debug Output
-      run: echo "Version from bump_version: ${{ steps.bump_version.outputs.version }}"
+      run: |
+        echo "Version from bump_version: ${{ steps.bump_version.outputs.version }}"
 
     - name: Generate deployment package
       run: zip -r deploy.zip . -x '*.git*'
