--- a/.github/workflows/flask-build.yaml
+++ b/.github/workflows/flask-build.yaml
@@ -54,6 +54,10 @@ jobs:
           git commit -m "Increment version to ${{ env.new_version }}"
           git push https://${GH_PAT}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
 
+      - name: Debug Output
+        run: |
+        echo "Version from bump_version: ${{ steps.bump_version.outputs.version }}"
+
   build-and-test:
     runs-on: ubuntu-latest
     needs: increment-version
