--- a/.github/workflows/flask-build.yaml
+++ b/.github/workflows/flask-build.yaml
@@ -97,7 +97,7 @@ jobs:
 
   Deploy:
     runs-on: ubuntu-latest
-    needs: build-and-test, increment-version
+    needs: [ build-and-test, increment-version ]
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
