--- a/.github/workflows/ecr-ecs-update.yaml
+++ b/.github/workflows/ecr-ecs-update.yaml
@@ -23,3 +23,6 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
