--- a/.github/workflows/ecr-ecs-update.yaml
+++ b/.github/workflows/ecr-ecs-update.yaml
@@ -26,3 +26,16 @@ jobs:
 
       - name: Log in to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build and tag Docker image
+        run: |
+          IMAGE_TAG=latest
+          REPO_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY }}
+          docker build -t $REPO_URI:$IMAGE_TAG .
+          echo "Image tagged as $REPO_URI:$IMAGE_TAG"
+
+      - name: Push Docker image to Amazon ECR
+        run: |
+          IMAGE_TAG=latest
+          REPO_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY }}
+          docker push $REPO_URI:$IMAGE_TAG
