--- a/.github/workflows/ecr-ecs-update.yaml
+++ b/.github/workflows/ecr-ecs-update.yaml
@@ -39,3 +39,24 @@ jobs:
           IMAGE_TAG=latest
           REPO_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY }}
           docker push $REPO_URI:$IMAGE_TAG
+
+      - name: Update task def
+        run: |
+          TASK_NAME=greeter
+          SERVICE_NAME=greeter-service1
+          IMAGE_NAME=greeting-app/hello-world655
+          CLUSTER_NAME=test-greeter-cluster
+           REGION=us-east-1
+          VERSION=5
+          ACCOUNT_NUMBER=${{ secrets.AWS_ACCOUNT_ID }}
+
+          NEW_IMAGE=$ACCOUNT_NUMBER.dkr.ecr.$REGION.amazonaws.com/$IMAGE_NAME:$VERSION
+          TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "$TASK_NAME" --region "$REGION")
+          NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$NEW_IMAGE" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities) | del(.registeredAt) | del(.registeredBy)')
+          NEW_REVISION=$(aws ecs register-task-definition --region "$REGION" --cli-input-json "$NEW_TASK_DEFINITION")
+          NEW_REVISION_DATA=$(echo $NEW_REVISION | jq '.taskDefinition.revision')
+
+          NEW_SERVICE=$(aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --task-definition $TASK_NAME --force-new-deployment)
+
+          echo "done"
+          echo "${TASK_NAME}, Revision: ${NEW_REVISION_DATA}"
